--- a/src/app/compras-modal/compras-modal.component.html
+++ b/src/app/compras-modal/compras-modal.component.html
@@ -74,7 +74,7 @@
   </table>
 </div>
 <div mat-dialog-actions class="dialog-actions">
-  <button mat-button (click)="loadComprasDetails()" class="button filter-button">Filtrar</button>
-  <button mat-button (click)="close()" class="button close-button">Cerrar</button>
+  <button mat-button (click)="loadComprasDetails()" class="button filter-button $event.stopPropagation()">Filtrar</button>
+  <button mat-button (click)="close()" class="button close-button $event.stopPropagation()">Cerrar</button>
   <button mat-button (click)="exportToExcel()" class="button export-button">Exportar</button>
 </div>
