--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -258,7 +258,7 @@
             </mat-select>
           </mat-form-field>
           <!-- Filtro de Estado -->
-          <mat-form-field class="custom-form-field" [ngClass]="{ 'filter-active': selectedStatus !== null }">
+          <mat-form-field class="custom-form-field" [ngClass]="{'filter-active': selectedStatus !== null }">
             <mat-label>Filtrar por Estado</mat-label>
             <mat-select [(ngModel)]="selectedStatus" (ngModelChange)="onStatusFilterChange()" class="custom-select">
               <mat-option [value]="null">Todos</mat-option>
@@ -286,7 +286,7 @@
               <ng-container *ngFor="let product of filteredProducts(); let i = index">
                 <tr [class.highlighted]="product.showDetails" [class.desabilitado]="!product.nEdoPrd"
                   (click)="toggleProductDetails(product, $event)">
-                  <td class="codigo-column">{{ product.cCodPrd }}</td>
+                  <td>{{ product.cCodPrd }}</td>
                   <td>{{ product.cDesPrd }}</td>
                   <td>{{ getUnits(product.nUniPrd) }}</td>
                   <td>{{ product.nInvAPrd }}</td>
@@ -297,19 +297,22 @@
                   <td>{{ product.dAltPrd | date:'dd-MM-yyyy' }}</td>
                   <td>
                     <div class="action-buttons">
-                      <button class="btn-edit" (click)="editProduct(product); $event.stopPropagation()" [disabled]="!product.nEdoPrd">
+                      <button class="btn-edit" (click)="editProduct(product); $event.stopPropagation()"
+                        [disabled]="!product.nEdoPrd">
                         Editar
                       </button>
-                      <button class="btn-enable" *ngIf="!product.nEdoPrd" (click)="habilitarProducto(product.cCodPrd); $event.stopPropagation()">
+                      <button class="btn-enable" *ngIf="!product.nEdoPrd"
+                        (click)="habilitarProducto(product.cCodPrd); $event.stopPropagation()">
                         Habilitar
                       </button>
-                      <button class="btn-disable" *ngIf="product.nEdoPrd" (click)="deshabilitarProducto(product.cCodPrd); $event.stopPropagation()">
+                      <button class="btn-disable" *ngIf="product.nEdoPrd"
+                        (click)="deshabilitarProducto(product.cCodPrd); $event.stopPropagation()">
                         Deshabilitar
                       </button>
                     </div>
                   </td>
                 </tr>
-              
+
                 <!-- Fila expandida con detalles del producto -->
                 <tr *ngIf="product.showDetails">
                   <td colspan="10">
@@ -318,7 +321,8 @@
                         <div class="d-flex flex-wrap">
                           <!-- Imagen con evento de clic -->
                           <div *ngFor="let imageUrl of product.imageUrls" class="me-3">
-                            <img [src]="imageUrl" class="img-fluid normal-image" (click)="openImageModal(imageUrl)" (error)="onImageError($event) " />
+                            <img [src]="imageUrl" class="img-fluid normal-image" (click)="openImageModal(imageUrl)"
+                              (error)="onImageError($event) " />
                           </div>
                         </div>
                       </div>
@@ -336,8 +340,8 @@
                   </td>
                 </tr>
               </ng-container>
-              
-              
+
+
               <!-- Fila vacía cuando no hay productos -->
               <tr *ngIf="filteredProducts().length === 0">
                 <td colspan="3">No hay productos para mostrar.</td>
