--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -3,7 +3,7 @@
   flex: 100px;
   background-color: #343a40;
   /* Color oscuro */
-  color: #ffffff;
+
   /* Texto blanco */
   padding: 20px;
   /* Agregamos un poco de espaciado para mayor separación */
@@ -166,7 +166,7 @@
 /* Efecto al enfocar los inputs */
 .form-container input:focus {
   border-color: #007bff;
-  background-color: #ffffff;
+
   outline: none;
 }
 
@@ -287,7 +287,7 @@
 .table th {
   font-size: 0.85rem;
   /* Tamaño ligeramente mayor para los encabezados */
-  background-color: #f1f3f5;
+
   /* Fondo claro */
   padding: 0.3rem;
   /* Espaciado interno */
@@ -389,7 +389,7 @@
   margin-top: 10px;
   position: sticky;
   bottom: 0;
-  background: white;
+
   z-index: 10;
   /* Mantén la paginación sobre otros elementos */
 }
@@ -596,7 +596,7 @@ button:disabled {
   /* Cambia el color según tu paleta */
   border-radius: 4px;
   padding: 2px;
-  background-color: #e8eaf6;
+
   /* Suave indicación visual */
 }
 
@@ -613,7 +613,7 @@ button:disabled {
 
 
 .highlighted {
-  background-color: #8cc9ff; /* Fondo azul claro */
+  background-color: #8cc9ff !important; /* Fondo azul claro */
   border-bottom: 4px solid #007bff; /* Subrayado azul claro */
 }
 
