--- a/src/app/vales-modal/vales-modal.component.html
+++ b/src/app/vales-modal/vales-modal.component.html
@@ -1,10 +1,9 @@
 <h2 mat-dialog-title>Detalles del Vale - {{ data.productId }}: {{ data.desproduct }}</h2>
-<div mat-dialog-content>
   <!-- Indicador de carga -->
   <div *ngIf="loading | async" class="loading-overlay">
     Cargando...
   </div>
-
+<div mat-dialog-content>
   <!-- Filtros de fecha -->
   <mat-form-field>
     <mat-label>Fecha de inicio</mat-label>
@@ -25,18 +24,18 @@
     <input matInput [(ngModel)]="filtervalesxNumber" placeholder="Filtrar por Número de Vale"
       (input)="applyValesNumberFilter()">
   </mat-form-field>
-
-  <!-- Tabla de detalles -->
+  <div class="table-container">
+  <!-- Tabla con encabezado fijo -->
   <table mat-table [dataSource]="filteredData" class="mat-elevation-z8">
+    <!-- Columna ejemplo -->
     <ng-container matColumnDef="nnumval">
       <th mat-header-cell *matHeaderCellDef> Número Vale </th>
       <td mat-cell *matCellDef="let detalle"> {{ detalle.nnumval }} </td>
     </ng-container>
     <ng-container matColumnDef="nCtdVal">
       <th mat-header-cell *matHeaderCellDef> Cantidad </th>
-      <td mat-cell *matCellDef="let detalle"> {{ detalle.nCtdVal| number:'1.2-2' }} </td>
+      <td mat-cell *matCellDef="let detalle"> {{ detalle.nCtdVal | number:'1.2-2' }} </td>
     </ng-container>
-
     <ng-container matColumnDef="nPreVal">
       <th mat-header-cell *matHeaderCellDef> Precio </th>
       <td mat-cell *matCellDef="let detalle"> {{ detalle.nPreVal | number:'1.2-2'}} </td>
@@ -62,7 +61,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </div>
-
+</div>
 <div mat-dialog-actions class="dialog-actions">
   <button mat-button (click)="loadValesDetalles()" class="button filter-button $event.stopPropagation()">Filtrar</button>
   <button mat-button (click)="close()" class="button close-button $event.stopPropagation()">Cerrar</button>
